--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ resolver = "2"
 [dependencies]
 defmt = { version = "0.3.5", optional = true }
 embassy-usb = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
+log = { version = "0.4.20", optional = true }
