--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ resolver = "2"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-defmt = { version = "0.3.5", optional = true }
-embassy-usb = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
-log = { version = "0.4.20", optional = true }
+defmt = { version = "0.3.6", optional = true }
+embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
+log = { version = "0.4.21", optional = true }
