--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ resolver = "2"
 
 [dependencies]
 defmt = { version = "0.3.6", optional = true }
-embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
+embassy-usb = "0.1.0"
 log = { version = "0.4.21", optional = true }
